Enum "estate_purpose_enum" {
  "SALE"
  "RENT"
  "SALE_OR_RENT"
}

Enum "estate_status_enum" {
  "DRAFT"
  "ACTIVE"
  "ARCHIVED"
}

Enum "estate_type_enum" {
  "APARTMENT"
  "HOUSE"
  "VILLA"
  "TOWNHOUSE"
  "LAND"
  "OFFICE"
  "SHOPHOUSE"
  "WAREHOUSE"
  "COMMERCIAL"
  "HOTEL"
  "RESORT"
  "FARM"
  "OTHER"
}

Enum "media_type_enum" {
  "image"
  "video"
}

Table "migrations" {
  "id" integer [pk, not null]
  "timestamp" bigint [not null]
  "name" "character varying" [not null]
}

Table "tbl_estate" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
  "created_by" uuid
  "updated_by" uuid
  "status" estate_status_enum [not null, default: `'DRAFT'::public.estate_status_enum`]
  "approved_by" uuid
  "approved_date" timestamp
  "rejected_by" uuid
  "rejected_date" timestamp
  "rejection_reason" text
  "fk_customer_id" uuid [not null]
  "address" "character varying(500)" [not null]
  "title" "character varying(500)" [not null]
  "price" bigint
  "type" estate_type_enum [not null]
  "purpose" estate_purpose_enum [not null]
  "description" text
  "area" numeric(10,2)
  "bedrooms" integer
  "bathrooms" integer
  "floors" integer
  "latitude" numeric(10,7)
  "longitude" numeric(10,7)
  "features" json
  "start_date" timestamp
  "end_date" timestamp
  "is_featured" boolean [not null, default: false]
  "fk_province_id" uuid
  "fk_ward_id" uuid

  Indexes {
    fk_province_id [type: btree, name: "idx_estate_province"]
    purpose [type: btree, name: "idx_estate_purpose"]
    status [type: btree, name: "idx_estate_status"]
    type [type: btree, name: "idx_estate_type"]
  }
}

// Property lifecycle is independent from soft deletion.
// Public reads require status = ACTIVE and deleted_at IS NULL.
// DRAFT and ARCHIVED rows remain provider-visible while deleted_at is NULL.
// Lifecycle restore never clears deleted_at; DELETE remains a separate legacy
// soft-delete operation.

Table "tbl_media" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
  "created_by" uuid
  "updated_by" uuid
  "fk_estate_id" uuid [not null]
  "media_url" "character varying(1000)" [not null]
  "type" media_type_enum [not null]
  "caption" "character varying(255)"
  "sort_order" integer [not null, default: 0]

  Indexes {
    fk_estate_id [type: btree, name: "idx_media_estate"]
  }
}

Table "tbl_permission" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "name" "character varying" [unique, not null]
  "description" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
  "created_by" "character varying"
  "updated_by" "character varying"
}

Table "tbl_province" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "name" "character varying(100)" [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "code" "character varying(2)" [not null]
  "type" "character varying(20)" [not null]

  Indexes {
    code [type: btree, unique, name: "uq_province_code"]
  }
}

Table "tbl_role" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "name" "character varying" [unique, not null]
  "description" text
  "is_system" boolean [not null, default: false]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
  "created_by" "character varying"
  "updated_by" "character varying"
}

Table "tbl_role_permissions" {
  "role_id" uuid [not null]
  "permission_id" uuid [not null]

  Indexes {
    (role_id, permission_id) [pk, name: "PK_63c7980c2b68efdd91862aab1eb"]
    permission_id [type: btree, name: "idx_role_permissions_permission_id"]
  }
}

Table "tbl_customer_account" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "email" "character varying" [unique, not null]
  "password" "character varying" [not null]
  "role_id" uuid [not null]
  "is_email_verified" boolean [not null, default: false]
  "last_login" timestamp
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
  "created_by" "character varying"
  "updated_by" "character varying"

  Indexes {
    role_id [type: btree, name: "IDX_815721470c574aed27ade42da2"]
  }
}

Table "tbl_ward" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "name" "character varying(100)" [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "code" "character varying(5)" [not null]
  "type" "character varying(20)" [not null]
  "fk_province_id" uuid [not null]

  Indexes {
    fk_province_id [type: btree, name: "idx_ward_province"]
    code [type: btree, unique, name: "uq_ward_code"]
  }
}

Ref "FK_3044342ef6f666bcba1fa1b958a":"tbl_estate"."id" <? "tbl_media"."fk_estate_id" [delete: cascade]

Ref "fk_estate_province_id":"tbl_province"."id" ?<? "tbl_estate"."fk_province_id" [delete: set null]

Ref "fk_estate_customer_id":"tbl_customer_account"."id" <? "tbl_estate"."fk_customer_id" [delete: cascade]

Ref "fk_estate_ward_id":"tbl_ward"."id" ?<? "tbl_estate"."fk_ward_id" [delete: set null]

Ref "fk_role_permissions_permission":"tbl_permission"."id" <? "tbl_role_permissions"."permission_id" [delete: cascade]

Ref "fk_role_permissions_role":"tbl_role"."id" <? "tbl_role_permissions"."role_id" [delete: cascade]

Ref "fk_customer_account_role":"tbl_role"."id" <? "tbl_customer_account"."role_id" [delete: restrict]

Ref "fk_ward_province_id":"tbl_province"."id" <? "tbl_ward"."fk_province_id" [delete: restrict]
